--- a/jspweb15_etcSeoul_semiP/src/main/webapp/css/jhdetail.css
+++ b/jspweb15_etcSeoul_semiP/src/main/webapp/css/jhdetail.css
@@ -1,33 +1,37 @@
-#etc{
-	text-align : left;
-	float : left;
-	font-size : 15px;
-	color : grey;
-}
-#list{	
-	color : black;
-	text-align : left;
-}
 #jhcontent{
-	width : 100%;
+	/* text-align : center; */
+	margin : auto;
+}
+#button input[type="submit"], #button input[type="button"]{
 	text-align : center;
+	background-color: black;
+	color : white;
+}
+#list input[type="button"]{
+	text-align : center;
+	background-color: black;
+	color : white;
 }
 body {
   font-family: Arial, sans-serif;
-  text-align: center; /* 내용을 가운데 정렬 */
+  text-align: center;
   color: black;
   width : 90%;
   margin : 0 auto;
 }
-thead tr th {
-	text-align: center !important;
+table {
+	margin : auto;
 }
-input[type="button"] {
-  background-color: black !important;
-  color: white !important;
-  padding: 5px 5px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin: 3px;
+#jhtitle,#jhcontent{
+	font-weight: bold;
+}
+hr {
+	width : 90%;
+}
+#etc {
+	color : grey;
+	float: center;
+}
+#etc td {
+	text-align: center;
 }
